<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Chaos Campus</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="licenses">Licenses</string>
    <string name="templates">Templates</string>
    <string name="save_log">Save log</string>
    <string name="about_message">This app allows you to launch J2ME apps and games on Android. It supports most 2D games and also 3D with some limitations.&lt;BR></string>
    <string name="help_message">&#8226; Enabling filtering in some cases can greatly reduce performance. Disable this option if game is too slow.&lt;BR>&#8226; Image flickering issues can be fixed by enabling the "Immediate processing mode" option.</string>
    <string name="about_email" translatable="false">&lt;BR>Email: &lt;a href="mailto:j2me.loader@mail.ru">j2me.loader@mail.ru&lt;/a></string>
    <string name="about_github" translatable="false">&lt;BR>GitHub: &lt;a href="https://github.com/nikita36078/J2ME-Loader">github.com/nikita36078/J2ME-Loader&lt;/a></string>
    <string name="about_4pda" translatable="false">&lt;BR>4PDA: &lt;a href="http://4pda.ru/forum/index.php?showtopic=824201">4pda.ru/forum/index.php?showtopic=824201&lt;/a></string>
    <string name="about_xda" translatable="false">&lt;BR>XDA: &lt;a href="https://forum.xda-developers.com/android/apps-games/app-j2me-loader-t3777889">forum.xda-developers.com/android/apps-games/app-j2me-loader-t3777889&lt;/a></string>
    <string name="about_crowdin" translatable="false">&lt;BR>Crowdin(translation): &lt;a href="https://crowdin.com/project/j2me-loader">crowdin.com/project/j2me-loader&lt;/a></string>
    <string name="about_copyright" translatable="false">&lt;BR>&lt;BR>Copyright 2017-2019 Nikita Shakarun</string>
    <string name="author">Author: </string>
    <string name="version">Version: </string>
    <string name="no_data_for_display">No data</string>
    <string name="message_delete">Do you really want to delete this app?</string>
    <string name="converting_wait">Converting JAR...</string>
    <string name="convert_complete">Complete</string>
    <string name="converting_message">Processing...</string>
    <string name="permission_request_failed">This app requires storage write permission</string>
    <string name="external_storage_not_mounted">This app requires external storage</string>
    <string name="action_context_shortcut">Add shortcut</string>
    <string name="action_settings">Settings</string>
    <string name="action_context_delete">Delete</string>
    <string name="action_context_rename">Rename</string>

    <string name="donate">Donate</string>
    <string name="donation_paypal_item" translatable="false">J2ME Loader donation</string>
    <string-array name="donation_google_catalog_values" translatable="false">
        <item>1 USD</item>
        <item>2 USD</item>
        <item>5 USD</item>
        <item>10 USD</item>
    </string-array>

    <string name="START_CMD">Start</string>
    <string name="CANCEL_CMD">Cancel</string>
    <string name="CLEAR_DATA_CMD">Clear data</string>
    <string name="RESET_SETTINGS_CMD">Reset settings</string>
    <string name="RESET_LAYOUT_CMD">Reset keylayout</string>
    <string name="LOAD_TEMPLATE_CMD">Load template</string>
    <string name="SAVE_TEMPLATE_CMD">Save template</string>
    <string name="PREF_SCREEN_OPTIONS">Screen options</string>
    <string name="PREF_SCALE_RATIO">Scale(%)</string>
    <string name="PREF_SCALE_TO_FIT">Scale to fit</string>
    <string name="PREF_KEEP_ASPECT_RATIO">Keep aspect ratio</string>
    <string name="PREF_FILTER">Filter</string>
    <string name="PREF_IMMEDIATE">Immediate processing mode</string>
    <string name="PREF_SHOW_FPS">Show FPS</string>
    <string name="PREF_LIMIT_FPS">Limit FPS</string>
    <string name="PREF_FONT_OPTIONS">Font options</string>
    <string name="PREF_WIDTH">Width</string>
    <string name="PREF_HEIGHT">Height</string>
    <string name="PREF_FONT_SMALL">Small</string>
    <string name="PREF_FONT_MEDIUM">Medium</string>
    <string name="PREF_FONT_LARGE">Large</string>
    <string name="PREF_FONT_SIZE_IN_SP">Values are in Scaled Pixels</string>
    <string name="PREF_BACKGROUND">Background</string>
    <string name="PREF_VIRTUAL_KEYBOARD_OPTIONS">Virtual keyboard</string>
    <string name="PREF_VK_SHOW">Show keyboard</string>
    <string name="PREF_VK_FEEDBACK">Haptic feedback</string>
    <string name="PREF_TOUCH_INPUT">Touch input</string>
    <string name="PREF_HW_ACCELERATION">HW acceleration (unstable)</string>
    <string name="PREF_VK_BACK">Buttons</string>
    <string name="PREF_VK_FORE">Labels</string>
    <string name="PREF_VK_OUTLINE">Outline</string>
    <string name="PREF_COLOR_HINT" translatable="false">RGB</string>
    <string name="PREF_VK_ALPHA">Opacity: </string>
    <string name="PREF_VK_HIDE_DELAY">Hide delay: </string>
    <string name="PREF_UNIT_MS">ms</string>
    <string name="PREF_VK_SEL_FORE">Labels (P)</string>
    <string name="PREF_VK_SEL_BACK">Buttons (P)</string>
    <string name="PREF_VK_KEY_SIZES">Key sizes</string>
    <string name="PREF_VK_NAV_KEYS">Joystick: </string>
    <string name="PREF_VK_SOFT_KEYS">Soft keys: </string>
    <string name="PREF_VK_NUM_KEYS">Digits: </string>
    <string name="PREF_VK_FIRE_KEY">Fire: </string>
    <string name="PREF_VK_SIZE_HINT">Size</string>
    <string name="SIZE_PRESETS">Presets</string>
    <string name="SWAP_SIZES">Swap sizes</string>
    <string name="PREF_SYS_PROPS">System properties</string>
    <string name="PREF_SYS_PROPS_HINT" translatable="false">microedition.platform: Sony Ericsson C510i\nmicroedition.profiles: MIDP2.0</string>
    <string name="PREF_ORIENTATION">Screen orientation</string>
    <string-array name="PREF_ORIENTATION_ENTRIES">
        <item>Default</item>
        <item>Auto</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string name="error">Error</string>
    <string name="message_clear_data">Do you really want to clear app data?</string>
    <string name="PREF_VK_TYPE">Keyboard type</string>
    <string-array name="PREF_VK_TYPE_ENTRIES">
        <item>Customizable</item>
        <item>Phone</item>
        <item>Phone (arrows)</item>
    </string-array>

    <string name="FORCE_CLOSE_CONFIRMATION">Force-closing the application may result in data loss or even break it completely!\nProceed?</string>
    <string name="CONFIRMATION_REQUIRED">Confirmation required</string>
    <string name="select_dialog_title">Select MIDlet</string>
    <string name="crash_dialog_message">Do you want to send error report to the developer?</string>
    <string name="crash_dialog_title">Error detected</string>
    <string name="report_crash">Send</string>
    <string name="layout_edit_finished">Edit mode finished</string>
    <string name="layout_edit_finish">Finish edit mode</string>
    <string name="layout_edit_mode">Keylayout edit mode</string>
    <string name="layout_scale_mode">Keylayout resize mode</string>
    <string name="layout_switch">Switch keylayout</string>
    <string name="hide_buttons">Hide buttons</string>
    <string name="take_screenshot">Take screenshot</string>
    <string name="screenshot_saved">Screenshot has been saved to</string>
    <string name="log_saved">Log has been saved</string>
    <string name="common_settings">[COMMON SETTINGS]</string>

    <string name="pref_theme_title">Theme</string>
    <string-array name="pref_theme_entries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values" translatable="false">
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="pref_requires_restart_summary">Requires restart</string>
    <string name="pref_enable_actionbar_title">Enable ActionBar</string>
    <string name="pref_enable_actionbar_summary">In fullscreen applications</string>
    <string name="pref_wakelock_title">Keep screen on</string>
    <string name="pref_button_shape_title">Button shape</string>
    <string-array name="pref_button_shape_entries">
        <item>Round</item>
        <item>Square</item>
    </string-array>
    <string-array name="pref_button_shape_values" translatable="false">
        <item>round</item>
        <item>square</item>
    </string-array>
    <string name="pref_app_sort_title">App sort order</string>
    <string-array name="pref_app_sort_entries">
        <item>Name</item>
        <item>Date</item>
    </string-array>
    <string-array name="pref_app_sort_values" translatable="false">
        <item>name</item>
        <item>date</item>
    </string-array>
    <string name="pref_map_keys">Key mappings</string>
    <string name="pref_encoding_title">Encoding</string>
    <string-array name="pref_encoding_entries" translatable="false">
        <item>UTF-8</item>
        <item>ISO-8859-1</item>
    </string-array>
    <string-array name="pref_encoding_values" translatable="false">
        <item>UTF-8</item>
        <item>ISO-8859-1</item>
    </string-array>
    <string name="pref_default_settings">Default settings</string>

    <string name="_RESOLUTION_SEPARATOR" translatable="false">x</string>
    <string name="_FONT_SEPARATOR" translatable="false">-</string>
    <string name="_MINUS_ONE" translatable="false">-1</string>
    <string name="virtual_key_left_soft" translatable="false">L</string>
    <string name="virtual_key_right_soft" translatable="false">R</string>
    <string name="virtual_key_d" translatable="false">D</string>
    <string name="virtual_key_c" translatable="false">C</string>
    <string name="virtual_key_left" translatable="false">←</string>
    <string name="virtual_key_right" translatable="false">→</string>
    <string name="virtual_key_up" translatable="false">↑</string>
    <string name="virtual_key_down" translatable="false">↓</string>
    <string name="virtual_key_f" translatable="false">F</string>
    <string name="virtual_key_1" translatable="false">1</string>
    <string name="virtual_key_2" translatable="false">2</string>
    <string name="virtual_key_3" translatable="false">3</string>
    <string name="virtual_key_4" translatable="false">4</string>
    <string name="virtual_key_5" translatable="false">5</string>
    <string name="virtual_key_6" translatable="false">6</string>
    <string name="virtual_key_7" translatable="false">7</string>
    <string name="virtual_key_8" translatable="false">8</string>
    <string name="virtual_key_9" translatable="false">9</string>
    <string name="virtual_key_0" translatable="false">0</string>
    <string name="virtual_key_star" translatable="false">*</string>
    <string name="virtual_key_pound" translatable="false">#</string>
    <string name="mapping_dialog_title">Press a key</string>
    <string name="mapping_dialog_message" formatted="false">Current mapping: %1$s</string>
    <string name="reset_mapping">Reset</string>
    <string name="parallel_screen_redrawing">Parallel screen redrawing</string>


</resources>
